--- a/code_samples_june_2020/requirements.txt
+++ b/code_samples_june_2020/requirements.txt
@@ -1,16 +1,23 @@
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+et-xmlfile==1.0.1
 Flask==1.1.2
 Flask-BasicAuth==0.2.0
-idna==2.9
+idna==2.10
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.0
+openpyxl==3.0.4
+pandas==1.0.1
 pyaml==20.4.0
+python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
+six==1.15.0
 tabulate==0.8.7
 urllib3==1.25.9
 Werkzeug==1.0.1
